--- a/index.html
+++ b/index.html
@@ -12,36 +12,64 @@
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+
+    body{
+      font-family: "Hanken Grotesk", sans-serif;
+    }
+
+    
   </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+<div class="container">
+  <div class="result">
+    <div class="result-title">
+      <h1>Your result</h1>
+    </div>
+    <div class="score">
+      <p>76</p>
+      <p>of 100</p>
+    </div>
+    <div class="evaluation">
+      <p>Great</p>
+    </div>
+    <div class="description">
+      <p>You scored higher than 65% of the people who have taken these tests.</p>
+    </div>
   </div>
+  <div class="summary"></div>
+    <div class="summary-title">
+      <h2>Summary</h2>
+    </div>
+    <div class="reaction">
+      <p>Reaction</p>
+      <p>80 / 100</p>
+    </div>
+    <div class="memory">
+      <p>Memory</p>
+      <p>92 / 100</p>
+    </div>
+    <div class="verbal">
+      <p>Verbal</p>
+      <p>61 / 100</p>
+    </div>
+    <div class="visual">
+      <p>Visual</p>
+      <p>72 / 100</p>
+    </div>
+    <div class="continue">
+      <button>Continue</button>
+    </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Arkadiusz Korszuń</a>.
+    </div>
+
+</div>
+ 
+  
 </body>
 </html>
